--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "engines": {
         "vscode": "^1.58.2"
     },
-    "enableProposedApi": true,
     "categories": [
         "SCM Providers",
         "Other"
@@ -165,14 +164,14 @@
                 "title": "Open Change",
                 "category": "Auto TFS",
                 "shortTitle": "Open",
-                "enablement": "config.auto-tfs.tf.path && activeViewlet == 'workbench.view.scm'"
+                "enablement": "config.auto-tfs.tf.path"
             },
             {
                 "command": "auto-tfs.scmview",
                 "title": "View",
                 "category": "Auto TFS",
                 "shortTitle": "View",
-                "enablement": "config.auto-tfs.tf.path && activeViewlet == 'workbench.view.scm'",
+                "enablement": "config.auto-tfs.tf.path",
                 "icon": "$(go-to-file)"
             },
             {
@@ -180,7 +179,7 @@
                 "title": "Revert",
                 "category": "Auto TFS",
                 "shortTitle": "Revert",
-                "enablement": "config.auto-tfs.tf.path && activeViewlet == 'workbench.view.scm'",
+                "enablement": "config.auto-tfs.tf.path",
                 "icon": "$(discard)"
             },
             {
@@ -188,14 +187,14 @@
                 "title": "Revert",
                 "category": "Auto TFS",
                 "shortTitle": "Revert",
-                "enablement": "config.auto-tfs.tf.path && activeViewlet == 'workbench.view.scm'"
+                "enablement": "config.auto-tfs.tf.path"
             },
             {
                 "command": "auto-tfs.revertall",
                 "title": "Revert All",
                 "category": "Auto TFS",
                 "shortTitle": "Revert",
-                "enablement": "config.auto-tfs.tf.path && activeViewlet == 'workbench.view.scm'",
+                "enablement": "config.auto-tfs.tf.path",
                 "icon": "$(discard)"
             },
             {
