--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"experimentalDecorators": true,
 		"importHelpers": true,
 		"module": "commonjs",
-		"target": "es6",
+		"target": "ES2020",
 		"outDir": "out",
 		"lib": ["es6"],
 		"sourceMap": true,
