--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,9 @@
 		"sourceMap": true,
 		"rootDir": "src",
 		"strict": true,
-		/* Additional Checks */
-		"noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
-		"noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
-		"noUnusedParameters": true /* Report errors on unused parameters. */
+		"noImplicitReturns": true,
+		"noFallthroughCasesInSwitch": true,
+		"noUnusedParameters": true
 	},
 	"include": [
 		"src/**/*"
