--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "auto-tfs",
     "displayName": "Auto TFS",
-    "description": "TF command utils for VS Code",
-    "version": "1.3.0",
+    "description": "TFS integration for Visual Studio Code",
+    "version": "1.3.1",
     "publisher": "nikhil-patil",
     "license": "MIT",
     "author": {
@@ -17,6 +17,11 @@
     "bugs": {
         "url": "https://github.com/nik-base/auto-tfs/issues",
         "email": "nikhil.patil.3632@gmail.com"
+    },
+    "icon": "ressources/icons/auto-tfs.png",
+    "galleryBanner": {
+        "color": "#000000",
+        "theme": "dark"
     },
     "readmeFilename": "README.md",
     "engines": {
