--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "auto-tfs",
     "displayName": "Auto TFS",
     "description": "TFS integration for Visual Studio Code",
-    "version": "1.3.2",
+    "version": "1.3.3",
     "publisher": "nikhil-patil",
     "license": "MIT",
     "author": {
@@ -32,7 +32,7 @@
         "Other"
     ],
     "activationEvents": [
-        "*"
+        "onStartupFinished"
     ],
     "keywords": [
         "tfs",
