Spanish language support for TFS command output

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "auto-tfs",
     "displayName": "Auto TFS",
     "description": "TFS integration for Visual Studio Code",
-    "version": "1.3.8",
+    "version": "1.3.9",
     "publisher": "nikhil-patil",
     "license": "MIT",
     "author": {
@@ -541,6 +541,15 @@
                 "auto-tfs.tf.path": {
                     "type": "string",
                     "description": "Full path to TF.EXE or TF.CMD"
+                },
+                "auto-tfs.tf.language": {
+                    "type": "string",
+                    "default": "English",
+                    "enum": [
+                        "English",
+                        "Spanish"
+                    ],
+                    "description": "Installed language of TFS"
                 },
                 "auto-tfs.tfs.confirm": {
                     "type": "boolean",
