--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "auto-tfs",
   "displayName": "Auto TFS",
   "description": "TFS integration for Visual Studio Code",
-  "version": "1.3.10",
+  "version": "1.4.0",
   "publisher": "nikhil-patil",
   "license": "MIT",
   "author": {
@@ -566,7 +566,7 @@
           ],
           "enumDescriptions": [
             "Don't checkout file(s)",
-            "Checkout file(s) on  (Recommended)",
+            "Checkout file(s) on save (Recommended)",
             "Checkout file(s) on change (Not Recommended)"
           ],
           "description": "Specifies when should file(s) checked out"
